--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -41,7 +41,7 @@ Hence the name DLRS = duplications, losses, rates & sequence evolution.
   * a file with samples drawn from the posterior distribution.
   * a supplementary info file with settings, proposal acceptance ratios, etc.
 
-<fon color='red'>
+<font color='red'>
 Below, you will find information on the input and output of the application, while some sample files and explanations of vital program options are found at the end of the document. If you want to get started quickly, we suggest that you download and try [DLRS#EXAMPLES Example 1], and have a look at it while reading through the other parts of the guide.
 </font>
 
