--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -12,6 +12,7 @@
   # [DLRS#ANALYSIS Analysis]
   # [DLRS#OPTIONS Options]
   # [DLRS#EXAMPLES Examples]
+  # [DLRS#FAQ FAQ]
 
 ----
 ----
@@ -342,3 +343,23 @@ On this larger family, we might want to model site rate heterogeneity, achieve s
 {{{
 java -cp mypath/jprime-X.Y.Z.jar -Xms768m -Xmx1536m se/cbb/jprime/apps/dlrs/Delirious -i 500000 -t 200 -o dlrs_example_3.mcmc -lout -sm JTT -srcats 4 -tngdup [0.3,0.3] -tngloss [0.3,0.3] -tngerm [0.1,0.1] -tngercv [0.1,0.1] -tngl [0.4,0.4] -tngsrshape [0.07,0.07] -tngwg [3.0,3.0] -tngwl [15.0,15.0] dlrs_example_3.stree dlrs_example_3.fa dlrs_example_3.map
 }}}
+
+
+----
+----
+----
+----
+
+== FAQ ==
+
+*Q1) What kind of trees and tree formats does Delirious support?*
+
+A1) Delirious uses strictly bifurcating rooted trees. This goes for both host and guest tree, and any input must comply with this. At the moment only input trees on the Newick format are supported.
+
+*Q2) What kind of MSA formats does Delirious support?*
+
+A2) At the moment, only the FASTA format is supported.
+
+*Q3) I get errors that seem to be related to the guest or species names. What could be wrong?*
+
+A3) Make sure that the guest-to-host mapping file refers precisely to the sequence names and host tree leaves (they are case sensitive). Also, it might be a good idea to replace any '|' characters with e.g. '_' in the accessions, if you want to use them.
