--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -362,4 +362,11 @@ A2) At the moment, only the FASTA format is supported.
 
 *Q3) I get errors that seem to be related to the guest or species names. What could be wrong?*
 
-A3) Make sure that the guest-to-host mapping file refers precisely to the sequence names and host tree leaves (they are case sensitive). Also, it might be a good idea to replace any '|' characters with e.g. '_' in the accessions, if you want to use them.
+A3) Make sure that the guest-to-host mapping file refers precisely to the sequence names and host tree leaves (they are case sensitive). Also, it might be a good idea to replace any '|' characters with e.g. '`_`' in the accessions, if you want to use them.
+
+*Q4) I get an error about "Division with zero" when I try to start Delirious. What's wrong?*
+
+A4) This means that the initial state is so poor that its probability gets rounded to zero. You might want to check these things:
+  # Is there a user-defined initial guest tree that includes branch lengths? If so, do they agree with my substitution model? If not, try removing the lengths to start with simple default values.
+  # Perhaps the initial values for the duplication or loss rate are inappropriate. Try setting some user-defined initial values.
+  # Perhaps the initial guest tree is too unrealistic. Try estimating a better topology, either by option -g NJ or option -fp, or infer a tree using some external method.
