--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -122,10 +122,12 @@ Monodelphis_domestica_1	Monodelphis_domestica
 Please note that the names are case-sensitive and must match those in the host and sequence files, and also that only the actual ID of the gene should be used. This is of particular importance in `|`-separated headers, meaning that for an NCBI-style FASTA header like
 {{{
 >gi|gi-number|gb|accession
-}}}, only `accession` should appear in the mapping file, while for a header like
+}}}
+only `accession` should appear in the mapping file, while for a header like
 {{{
 >custom|moreinfo|evenmoreinfo
-}}},only the initial part `custom` will be interpreted as the ID.
+}}}
+only the initial part `custom` will be interpreted as the ID.
 
 ----
 ----
