Edited wiki page DLRS through web user interface.

--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -394,6 +394,6 @@ A6) No, not at this point. Only empirical and fixed-parameter substitution model
 
 A7) No, not yet, although this may be included in the future.
 
-*Q8) How do I set the stem edge time and discretisation density?*
+*Q8) What is reasonable for the stem edge timespan and discretisation density?*
 
-A8) The time of the stem edge should be set to some reasonable value, e.g. 25-150% of the root-to-leaf-time. If you expect multiple out-paralogs to occur prior to the species tree root, then the upper range should probably be used. Having a long stem edge time span will reduce the duplication-loss rates slightly, although this is often marginal in consideration of the overall time span of the species tree. As for the discretization of the stem edge, the default value ought to do the trick in most cases. However, you may need to increase it if it causes issues during the run, or decrease it if the running time seems to burdensome. The number of points (specified through option `-dstem n`) must be sufficient for accomodating strange guest trees when moving  through tree space, but should ideally be as small as possible to reduce running time.
+A8) The timespan of the stem edge should be set to some reasonable value, e.g. 25-150% of the root-to-leaf-time. If you expect multiple out-paralogs to occur prior to the species tree root, then the upper range should probably be used. Having a long stem edge timespan will reduce the duplication-loss rates slightly, although this is often marginal in consideration of the overall timespan of the species tree. As for the discretization of the stem edge, the default value ought to do the trick in most cases. However, you may need to increase it if it causes issues during the run, or decrease it if the running time seems too burdensome. The number of points (specified through option `-dstem n`) must be sufficient for accomodating strange guest trees when moving  through tree space, but should ideally be as small as possible to reduce running time.
