Edited wiki page DLRS through web user interface.

--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -6,6 +6,7 @@
 
 == CONTENTS ==
   # [DLRS#INTRODUCTION Introduction]
+  # [DLRS#REFERENCES References]
   # [DLRS#INPUT Input]
   # [DLRS#OUTPUT Output]
   # [DLRS#RUNNING Running]
@@ -14,7 +15,6 @@
   # [DLRS#EXAMPLES Examples]
   # [DLRS#FAQ FAQ]
 
-----
 ----
 ----
 ----
@@ -47,6 +47,20 @@ Hence the name DLRS = duplications, losses, rates & sequence evolution.
 </font>
 
 ----
+----
+----
+
+
+== REFERENCES ==
+
+DLRS has been published [http://www.pnas.org/content/106/14/5714 here] and [http://bioinformatics.oxfordjournals.org/content/early/2012/09/14/bioinformatics.bts548 here]. If you use it, please cite:
+
+*Sjöstrand, J, Sennblad, B, Arvestad, L, Lagergren, J (2012) DLRS: Gene tree evolution in light of a species tree. Bioinformatics. doi: 10.1073/pnas.0806251106.*
+
+or alternatively:
+
+*Åkerborg, Ö, Sennblad, B, Arvestad, L, Lagergren, J (2009) Simultaneous Bayesian gene tree reconstruction and reconciliation analysis. PNAS. 106(14):5714-5719.*
+
 ----
 ----
 ----
