--- a/wiki/DLTRS.wiki
+++ b/wiki/DLTRS.wiki
@@ -63,7 +63,9 @@ DLTRS is currently under review.
 
 == INPUT ==
 
-Input to DLTRS is exactly the same as for DLRS. Therefore, please consult the [DLRS#INPUT DLRS input tutorial] for details. As mentioned above, input consists of a host tree with divergence times on the Newick format, a multiple sequence alignment on the FASTA format, and a file relating each sequence to each extant taxon.
+The required Input files to DLTRS are exactly the same as for DLRS. Therefore, please consult the [DLRS#INPUT DLRS input tutorial] for details. As mentioned above, these consist of 1) a host tree with divergence times on the Newick format, 2) a multiple sequence alignment on the FASTA format, and 3) a file relating each sequence to each extant taxon.
+
+There is, however, a difference in the way that the host tree is discretized.
 
 ----
 ----
