--- a/wiki/DLTRS.wiki
+++ b/wiki/DLTRS.wiki
@@ -120,6 +120,6 @@ Since Deleterious shares most aspects with its sibling application Delirious, we
 
 A1) That depends. Deleterious is an advanced and already fairly optimized application, which solves systems of ordinary differential equations and performs sophisticated dynamic programming during MCMC iterations. As such, it is time-consuming, and you will have to strike a balance between speed and precision in terms of discretization density. Note, however, that the discretization is carried out on an edge generation-basis (see the figure above). Therefore, an edge generation typically needs fewer points than an edge in Delirious. Also, since transfer events are supported, Deleterious does not need as many points as Delirious on the stem edge in order to cope with odd trees during tree exploration. Try using the default discretization, and if it is too demanding, decrease the density gradually.
 
-*Q2) LGT events always occurs between disjoint donor- and recipient species lineages. What about intra-species transfer?*
+*Q2) LGT events always occur between disjoint donor- and recipient species lineages. What about intra-species transfer?*
 
 A2) This is an interesting question. Such events will appear as duplication in the model. Therefore, the inferred duplication rate will encompass both intra-species transfer and, e.g., tandem duplications.
