--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -405,3 +405,11 @@ A7) No, not yet, although this may be included in the future.
 *Q8) What is reasonable for the stem edge timespan and discretisation density?*
 
 A8) The timespan of the stem edge should be set to some reasonable value, e.g. 25-150% of the root-to-leaf-time. If you expect multiple out-paralogs to occur prior to the species tree root, then the upper range should probably be used. Having a long stem edge timespan will reduce the duplication-loss rates slightly, although this is often marginal in consideration of the overall timespan of the species tree. As for the discretization of the stem edge, the default value ought to do the trick in most cases. However, you may need to increase it if it causes issues during the run, or decrease it if the running time seems too burdensome. The number of points (specified through option `-dstem n`) must be sufficient for accomodating strange guest trees when moving  through tree space, but should ideally be as small as possible to reduce running time.
+
+*Q9) Does Delirious support parallelization?*
+
+A9) Not at the moment. It is possible that future versions will include support for multiple cores (in particular when Java 7+ has become sufficiently adopted). MPI support for multiple compute nodes seems more unlikely. In such a scenario, we might opt instead for inclusion of a Hadoop/Map-Reduce framework
+
+*Q10 Does Delirious support Markov-coupled MCMC (MC^3)?*
+
+A10) Not at the moment. We are, however, pursuing efforts of improving exploration of the tree space for large trees.
