--- a/wiki/DLTRS.wiki
+++ b/wiki/DLTRS.wiki
@@ -43,7 +43,7 @@ Hence the name DLTRS = duplications, losses, transfers, rates & sequence evoluti
   * a supplementary info file with settings, proposal acceptance ratios, etc.
 
 <font color='red'>
-*Below, you will find information on the input and output of the application, while explanations of vital program options and some sample files can be found at the end of the document. If you want to get started quickly, we suggest that you download and try [DLTRS#EXAMPLES Example 1], and have a look at it while reading through the other parts of the guide.*
+*Since so many properties of Deleterious are shared with Delirious, we will often refer to the [DLRS tutorial of the latter] in order to keep information comprehensive and up-to-date. If you want to get started quickly, we suggest that you download and try [DLTRS#EXAMPLES Example 1], which can be found below, and have a look at it while reading through the other parts of the guide.*
 </font>
 
 ----
